Bug 217732 - Audible "pop" sound whenever audio card goes in or out of sleep
Summary: Audible "pop" sound whenever audio card goes in or out of sleep
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: Intel Linux
: P3 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-30 07:13 UTC by serfreeman1337
Modified: 2023-08-27 07:03 UTC (History)
3 users (show)

See Also:
Kernel Version: 6.4.7
Subsystem:
Regression: Yes
Bisected commit-id: 69ea4c9d02b7947cdd612335a61cc1a02e544ccd


Attachments
alsa-info.sh --no-upload (48.76 KB, text/plain)
2023-07-30 09:13 UTC, serfreeman1337
Details
Test fix patch from Kailang (1.45 KB, patch)
2023-08-15 09:07 UTC, Takashi Iwai
Details | Diff

Description serfreeman1337 2023-07-30 07:13:12 UTC
With recent 69ea4c9 commit there is an audible "pop" sound whenever the audio card goes in or out of sleep mode.

HW: MSI Modern A11M laptop with ALC233 codec:

# cat /proc/asound/card0/codec#0
Codec: Realtek ALC233
Address: 0
AFG Function Id: 0x1 (unsol 1)
Vendor Id: 0x10ec0235
Subsystem Id: 0x146212e1
Revision Id: 0x100002

Allowing this line for ALC233 solved the issue:

--- a/sound/pci/hda/patch_realtek.c
+++ b/sound/pci/hda/patch_realtek.c
@@ -3640,7 +3640,7 @@ static void alc256_shutup(struct hda_codec *codec)
       /* If disable 3k pulldown control for alc257, the Mic detection will not work correctly
        * when booting with headset plugged. So skip setting it for the codec alc257
        */
-       if (spec->en_3kpull_low)
+       if (spec->en_3kpull_low || codec->core.vendor_id == 0x10ec0235)
               alc_update_coef_idx(codec, 0x46, 0, 3 << 12);
 
       if (!spec->no_shutup_pins)
Comment 1 Takashi Iwai 2023-07-30 08:45:33 UTC
Please give alsa-info.sh output.  Run the script with --no-upload option and attach the output to Bugzilla.

The suggested commit disabled the workaround because it caused regressions.
This might be re-enabled for selected devices, supposedly.
Comment 2 serfreeman1337 2023-07-30 09:13:26 UTC
Created attachment 304729 [details]
alsa-info.sh --no-upload
Comment 3 The Linux kernel's regression tracker (Thorsten Leemhuis) 2023-08-11 08:50:04 UTC
Takashi, do you still have this in sight. I just wonder, as it looks like there was no progress for 10+ days, but I might be missing something.
Comment 4 Takashi Iwai 2023-08-11 13:28:25 UTC
Still waiting for the response from Realtek devs:
  https://lore.kernel.org/r/87o7jshxch.wl-tiwai@suse.de
Comment 5 Takashi Iwai 2023-08-15 09:07:30 UTC
Could you try the patch below?
Comment 6 Takashi Iwai 2023-08-15 09:07:49 UTC
Created attachment 304853 [details]
Test fix patch from Kailang
Comment 7 serfreeman1337 2023-08-18 07:43:03 UTC
Yes, it works. No more "pops".

Note You need to log in before you can comment on or make changes to this bug.